<resources>
    <string name="app_name">Intermareal</string>
    <string name="full_app_name">Guía de Fauna y Flora Intermareal</string>
    <string name="university_name">Universidad de Oviedo</string>
    <string name="navigation_drawer_open">Abrir drawer</string>
    <string name="navigation_drawer_close">Cerrar drawer</string>
    <string name="action_map">Ver Mapa</string>

    <string name="title_activity_algas">Algas y Liquenes</string>
    <string name="title_activity_anemonas">Anémonas y Corales</string>
    <string name="title_activity_equinodermos">Equinodermos</string>
    <string name="title_activity_moluscos">Moluscos</string>
    <string name="title_activity_crustaceos">Crustáceos</string>
    <string name="title_activity_anelidos">Anélidos</string>
    <string name="title_activity_peces">Peces</string>

    <string name="ecologyLabel">Ecología</string>
    <string name="descriptionLabel">Descripción</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="category">Categorias</string>
    <string name="identificar_especie">Identificar especie</string>

    <string name="msg">Esta aplicación necesita permisos para su funcionamiento.</string>
    <string name="habitatLabel">Habitat</string>
    <string name="taxonomyLabel">Taxonomia</string>
    <string name="referencesLabel">Referencias</string>
    <string name="action_search">Buscar especie</string>
    <string name="action_about">Acerca de…</string>
    <string name="exit_title">Salir</string>
    <string name="exit_message">¿Está seguro de que quiere salir de la aplicación?</string>
    <string name="imageViewyDescription">Specie background image for RecyclerView</string>
    <string name="about_url">www.uniovi.es</string>
    <string name="university">Universidad de Oviedo</string>
    <string name="colaboration">Proyecto en colaboración con el departamento de Biología</string>
    <string name="createdBy"><![CDATA[<Diseñado & Desarrollado>]]></string>
    <string name="developerName">Miguel Ángel Feijoo Diéguez</string>
    <string name="infoBy">Información obtenida por Noelia</string>
    <string name="appDescription">Guía para móviles de la fauna y flora intermareal</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="sizeLabel">Tamaño</string>

    <string name="search_view_hint">Busqueda por habitat...</string>

</resources>
