<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_identify"
        android:orderInCategory="100"
        android:title="@string/identificar_especie"
        android:icon="@android:drawable/ic_menu_camera"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        android:title="@string/action_about"
        android:icon="@android:drawable/ic_menu_help"
        app:showAsAction="never" />

</menu>
