<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@mipmap/background_drawer"
    android:layout_width="fill_parent"
    android:layout_height="400dp"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:isScrollContainer="true"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="380dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_marginTop="80dp"
                android:layout_centerHorizontal="true">

                    <TextView
                        android:text="@string/app_name"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/appDescription"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAlignment="center" />

                    <TextView
                        android:text="@string/university"
                        android:textColor="@android:color/white"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp" />

                    <TextView
                        android:text="@string/colaboration"
                        android:textColor="@android:color/white"
                        android:textSize="14.5sp"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp" />

                    <TextView
                        android:text="@string/createdBy"
                        android:textColor="@android:color/white"
                        android:textAlignment="center"
                        android:textSize="14.5sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp" />

                    <TextView
                        android:text="@string/developerName"
                        android:textColor="@android:color/white"
                        android:textSize="14.5sp"
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp" />

                <TextView
                        android:text="@string/about_url"
                        android:autoLink="web"
                        android:textColor="@android:color/white"
                        android:textAlignment="center"
                        android:textSize="14.5sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"/>

                </LinearLayout>

            <ImageView
                android:src="@mipmap/alga"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top"
                android:layout_marginTop="22dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
